--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=Vorobei55
 server.port=8081
 spring.jpa.properties.hibernate.show_sql=true
 logging.file.name=log.txt
+
+jwt.token.secret=jwtuser
+jwt.token.expired=3600000
