add tests and readme.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.properties.hibernate.show_sql=true
 logging.file.name=log.txt
 
 jwt.token.secret=jwtuser
+jwt.token.secret.i=jwtuseri
 jwt.token.expired=3600000
 
-schedule.variable=2022-06-08T10:21:00.0
+
+schedule.variable=2022-06-09T10:21:00.0
